0.18 
 - IAM update: SimulateCustomPolicy updated. Docs updated too

0.17 22 Oct 2015
 - Pass tests on MacOSX by Roger Pettett
 - BREAKING CHANGE: All API methods and attributes have been properly CamelCased. Before
   that, some services were being generated with method names and attributes starting with
   lowercase. For example, in CloudWatchLogs, method DescribeLogGroups would expect:
     limit => Int, logGroupNamePrefix => Str
   Now it expects
     Limit => Int, LogGroupNamePrefix => Str
   The affected services are CloudSearchDomain, CloudTrail, CloudWatchLogs, CodeCommit,
   CodeDeploy, CodePipeline, Support, SimpleWorkflow, Glacier, ECS, DirectConnect, 
   DeviceFarm, DataPipeline, Config. 

   This change also applies to never-released-to-cpan services: MarketplaceCommerceAnalytics,
   IoT, IoTData, Inspector.

 - loaded classes can be made immutable for better performance vs a bit more load time
 - services can be preloaded via Paws->preload (see examples/preload.pl)
 - Experimental Furl caller
 - Proper linking of documentation to appropiate classes
 - All classes now have doc (some innner shapes docs were not being generated) 
 - CloudFront methods had dates appended to them. Now all methods don't have the
   date appended, so anyone using CloudFront should be aware of that API change
 - New iterators for EC2 and Glacier
 - New caller: Paws::Net::FurlCaller. Uses Furl to do HTTP calls

 - S3 API update: Support for ServerSideEncryption 
 - KMS API update: New operations: CancelKeyDeletion ListRetirableGrants ScheduleKeyDeletion and docu update

0.16 09 Oct 2015
 - docu fixes by Gimpson
 - Timeout for all user agents set to 60 seconds. Will be configurable soon
 - S3 Update: Support for S3 Standard - Infrequent Access 
 - CloudWatchLogs Update: Export tasks
 - CloudFormation API Update: support for ResourceTypes
 - EC2 API update: Update to SpotFleet requests
 - SES API update: Support for Incoming mail