@@ -53,12 +53,11 @@ default value for this parameter is C<ABANDON>.
 
 =head2 HeartbeatTimeout => Int
 
-  Defines the amount of time, in seconds, that can elapse before the
-lifecycle hook times out. When the lifecycle hook times out, Auto
-Scaling performs the action defined in the C<DefaultResult> parameter.
-You can prevent the lifecycle hook from timing out by calling
-RecordLifecycleActionHeartbeat. The default value for this parameter is
-3600 seconds (1 hour).
+  The amount of time, in seconds, that can elapse before the lifecycle
+hook times out. When the lifecycle hook times out, Auto Scaling
+performs the action defined in the C<DefaultResult> parameter. You can
+prevent the lifecycle hook from timing out by calling
+RecordLifecycleActionHeartbeat. The default is 3600 seconds (1 hour).
 
 =head2 B<REQUIRED> LifecycleHookName => Str
 
